[gd_scene load_steps=7 format=3 uid="uid://cq2htnwl7sqwx"]

[ext_resource type="Texture2D" uid="uid://dd4usiya01u0g" path="res://assets/backgrounds/deserto (night).png" id="1_1uhdc"]
[ext_resource type="Theme" uid="uid://deqvgv4ausak" path="res://ui/autobots_theme.tres" id="1_p1rkb"]
[ext_resource type="Texture2D" uid="uid://biqc42h5vxfx6" path="res://assets/logo.svg" id="2_651ta"]
[ext_resource type="Script" path="res://ui/title_screen.gd" id="2_chxk1"]
[ext_resource type="Texture2D" uid="uid://upmh5jdawt2e" path="res://assets/ui/NinePatchRectv2.svg" id="3_mfkrb"]
[ext_resource type="PackedScene" uid="uid://bxl8ebvudqi2d" path="res://ui/credits_screen.tscn" id="6_8hshi"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_p1rkb")
script = ExtResource("2_chxk1")

[node name="BackGround" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_1uhdc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.141
anchor_right = 0.8
anchor_bottom = 0.867
grow_horizontal = 2
grow_vertical = 2

[node name="Logo" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_651ta")
stretch_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 192
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 192
theme_override_constants/margin_bottom = 16

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("3_mfkrb")
patch_margin_left = 22
patch_margin_top = 22
patch_margin_right = 22
patch_margin_bottom = 22

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/MarginContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="VBoxContainer/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="CreditsButton" type="Button" parent="VBoxContainer/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="CreditsScreen" parent="." instance=ExtResource("6_8hshi")]
visible = false
layout_mode = 1

[connection signal="pressed" from="VBoxContainer/MarginContainer/MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/MarginContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
